Cập nhật setup.bat và cấu trúc dự án an toàn hơn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
- 
+ <!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trung Tâm Dạy Toán THPT - MathCenter</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+</head>
+<body>
+    <!-- Header -->
+    <header class="header">
+        <nav class="navbar container">
+            <div class="logo">
+                <i class="fas fa-calculator"></i>
+                <span>MathCenter</span>
+            </div>
+            <ul class="nav-menu">
+                <li><a href="#home">Trang Chủ</a></li>
+                <li><a href="pages/courses.html">Khóa Học</a></li>
+                <li><a href="pages/teachers.html">Giảng Viên</a></li>
+                <li><a href="pages/quiz.html">Bài Tập</a></li>
+                <li><a href="pages/contact.html">Liên Hệ</a></li>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Chinh Phục Toán THPT Cùng Chúng Tôi</h1>
+                <p>Nâng cao kiến thức toán học với phương pháp giảng dạy hiện đại và đội ngũ giảng viên giàu kinh nghiệm</p>
+                <div class="hero-buttons">
+                    <a href="pages/courses.html" class="btn btn-primary">Xem Khóa Học</a>
+                    <a href="pages/quiz.html" class="btn btn-secondary">Làm Bài Test</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Stats Section -->
+    <section class="stats">
+        <div class="container">
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <i class="fas fa-users"></i>
+                    <h3>1000+</h3>
+                    <p>Học Viên</p>
+                </div>
+                <div class="stat-item">
+                    <i class="fas fa-chalkboard-teacher"></i>
+                    <h3>15+</h3>
+                    <p>Giảng Viên</p>
+                </div>
+                <div class="stat-item">
+                    <i class="fas fa-trophy"></i>
+                    <h3>5</h3>
+                    <p>Năm Kinh Nghiệm</p>
+                </div>
+                <div class="stat-item">
+                    <i class="fas fa-graduation-cap"></i>
+                    <h3>95%</h3>
+                    <p>Tỷ Lệ Đậu</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Featured Courses -->
+    <section class="featured-courses">
+        <div class="container">
+            <h2>Khóa Học Nổi Bật</h2>
+            <div class="courses-grid" id="featured-courses">
+                <!-- Courses will be loaded by JavaScript -->
+            </div>
+        </div>
+    </section>
+
+    <!-- Why Choose Us -->
+    <section class="why-choose">
+        <div class="container">
+            <h2>Tại Sao Chọn Chúng Tôi?</h2>
+            <div class="features-grid">
+                <div class="feature-item">
+                    <i class="fas fa-user-graduate"></i>
+                    <h3>Giảng Viên Giàu Kinh Nghiệm</h3>
+                    <p>Đội ngũ giảng viên có nhiều năm kinh nghiệm giảng dạy</p>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-laptop"></i>
+                    <h3>Phương Pháp Hiện Đại</h3>
+                    <p>Ứng dụng công nghệ trong giảng dạy</p>
+                </div>
+                <div class="feature-item">
+                    <i class="fas fa-clock"></i>
+                    <h3>Lịch Học Linh Hoạt</h3>
+                    <p>Thời gian học phù hợp với mọi đối tượng</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>MathCenter</h3>
+                    <p>Trung tâm dạy toán THPT hàng đầu</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h3>Liên Hệ</h3>
+                    <p><i class="fas fa-phone"></i> 0123-456-789</p>
+                    <p><i class="fas fa-envelope"></i> info@mathcenter.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> 123 Đường ABC, TP.HCM</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 MathCenter. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/main.js"></script>
+</body>
+</html>
